manifests/quizz-client-pipeline-listener.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quizz-client-pipeline-listener
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-quizz-client-pipeline-listener
    weight: 100
