manifests/quizz-client-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cheese-quizz-client
  name: cheese-quizz-client
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cheese-quizz-client
    weight: 100
  wildcardPolicy: None
